[package]
name = "amd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.38"
chrono-tz = "0.9.0"
poise = "0.6.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.46.0"
shuttle-serenity = "0.46.0"
tokio = "1.26.0"
tracing = "0.1.37"
