[package]
name = "amd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.83"
chrono = "0.4.38"
chrono-tz = "0.10.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
tokio = "1.26.0"
tracing = "0.1.37"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
