[package]
name = "amd"
version = "1.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = "0.4.38"
chrono-tz = "0.10.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
dotenv = "0.15.0"
serenity = { version = "0.12.4", features = ["chrono"] }
poise = "0.6.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
